--- a/3D PC SANDBOX game (Unity)/Version 1.0/main.html
+++ b/3D PC SANDBOX game (Unity)/Version 1.0/main.html
@@ -59,7 +59,7 @@
     <h1>UPDATES</h1>
     <ol>
         <li>Version 1.1 = more objects (coming for few days)</li>
-        <li>Version 2.0 = RigidBody component, natural disasters</li>
+        <li>Version 2.0 = RigidBody component and more</li>
         <li>Version 3.0 = multiplayer</li>
     </ol>
 </div>
@@ -69,3 +69,5 @@
     <p>Scripts on GitHub is Creative Commons.</p>
     <p>All other credits and copyrights things is in the HELP scenes in the game.</p>
 </div>
+
+<a href="https://vangutan2.wixsite.com/ringwormgo-games">Our game development site</a>
